Code/security.tf
resource "azurerm_network_security_group" "project-sg" {
  name                = "project-sg"
  location            = azurerm_resource_group.RG-Primary-Region.location
  resource_group_name = azurerm_resource_group.RG-Primary-Region.name

  security_rule {
    name                       = "Allow_HTTP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "Allow_HTTPS"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_subnet_network_security_group_association" "business-sga" {
  for_each                  = var.subnet_map
  subnet_id                 = azurerm_subnet.business-subnet[each.key].id
  network_security_group_id = azurerm_network_security_group.project-sg.id
}

resource "azurerm_subnet_network_security_group_association" "web-sga" {
  subnet_id                 = azurerm_subnet.web-subnet.id
  network_security_group_id = azurerm_network_security_group.project-sg.id
}
